# codecrafters-http-server-rust

./: Cargo.toml  LICENSE  README.md  codecrafters.yaml
src/: concurrency.rs  http.rs  main.rs
src/http/: encoding.rs  handler.rs  method.rs  middleware.rs  parse.rs  request.rs  server.rs  status.rs
src/http/middleware/: compression.rs
