[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.85.1"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"
regex = "1.11.1"                             # error handling
once_cell = { version = "1.21.3", features = ["std"] }
strum = { version = "0.27", features = ["derive"] }
